--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,13 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# OpenAI Configuration
+# Site URL for OAuth redirects
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# JSearch API (RapidAPI)
+RAPIDAPI_KEY=your_rapidapi_key
+
+# OpenAI Configuration (for future use)
 OPENAI_API_KEY=your_openai_api_key
 
 # Authentication
